# pluggable-knowledge-bridge-rag-mcp

./: README.md  main.py  pyproject.toml
config/: settings.yaml
config/prompts/: chunk_refinement.txt  image_captioning.txt  rerank.txt
scripts/: evaluate.py  ingest.py  query.py  start_dashboard.py
src/core/: __init__.py  settings.py  types.py
src/ingestion/: document_manager.py  pipeline.py
src/mcp_server/: protocol_handler.py  server.py
src/observability/: logger.py
tests/e2e/: test_dashboard_smoke.py  test_data_ingestion.py  test_mcp_client.py  test_recall.py
tests/fixtures/: golden_test_set.json  noisy_chunks.json
tests/integration/: test_hybrid_search.py  test_ingestion_pipeline.py  test_mcp_server.py
tests/unit/: test_azure_vision_llm.py  test_batch_processor.py  test_bm25_indexer_roundtrip.py  test_chunk_refiner.py  test_config_loading.py  test_core_types.py  test_cross_encoder_reranker.py  test_custom_evaluator.py  test_dense_encoder.py  test_dense_retriever.py  test_document_chunker.py  test_document_manager.py  test_embedding_factory.py  test_eval_runner.py  test_evaluator_contract.py  test_file_integrity.py  test_fusion_rrf.py  test_get_document_summary.py  test_image_captioner_fallback.py  test_image_storage.py  test_ingestion_tracing.py  test_jsonl_logger.py  test_list_collections.py  test_llm_factory.py  test_llm_reranker.py  test_loader_pdf_contract.py  test_metadata_enricher.py  test_pipeline_progress.py  test_query_processor.py  test_query_tracing.py  test_ragas_evaluator.py  test_reranker_contract.py  test_reranker_factory.py  (+10 more)
(+87 files in other folders)
